# ChangeLog for dev-lang/R
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/R/ChangeLog,v 1.152 2009/04/23 13:20:31 armin76 Exp $

  23 Apr 2009; Raúl Porcel <armin76@gentoo.org> R-2.8.1.ebuild:
  ia64 stable wrt #265338

*R-2.9.0 (21 Apr 2009)

  21 Apr 2009; Sébastien Fabbro <bicatali@gentoo.org> -R-2.7.1.ebuild,
  +R-2.9.0.ebuild:
  Bump

  18 Apr 2009; Markus Meier <maekke@gentoo.org> R-2.8.1:
  amd64/x86 stable, bug #265338

  15 Apr 2009; Brent Baude <ranger@gentoo.org> R-2.7.2.ebuild,
  R-2.8.1.ebuild:
  Marking R-2.7.2 | 2.8.1 ppc64 stable for bugs 244621 and 265338 respectively

  12 Apr 2009; Tobias Klausmann <klausman@gentoo.org> R-2.8.1.ebuild:
  Stable on alpha, bug #265338

  11 Apr 2009; nixnut <nixnut@gentoo.org> R-2.8.1.ebuild:
  ppc stable #265338

  10 Apr 2009; Jeroen Roovers <jer@gentoo.org> R-2.8.1.ebuild:
  Stable for HPPA (bug #265338).

  07 Apr 2009; Ferris McCormick <fmccor@gentoo.org> R-2.8.1.ebuild:
  Sparc stable, Bug #265338.

  29 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org>
  -files/R-2.8.0-without-X.patch, R-2.7.2.ebuild, -R-2.8.0.ebuild,
  R-2.8.1.ebuild:
  Move 2.7.2 to EAPI=2 and close bug #252661

*R-2.8.1 (02 Jan 2009)

  02 Jan 2009; Markus Dittrich <markusle@gentoo.org> +R-2.8.1.ebuild:
  Version bump (fixes bug #253117).

  09 Nov 2008; nixnut <nixnut@gentoo.org> R-2.7.2.ebuild:
  Stable on ppc wrt bug 244621

  31 Oct 2008; Markus Dittrich <markusle@gentoo.org>
  +files/R-2.8.0-without-X.patch, R-2.8.0.ebuild:
  Fixed bug in source code preventing building with USE="-X" (see bug
  #245027). Thanks much to Andrew Savchenko for his patch.

  30 Oct 2008; Raúl Porcel <armin76@gentoo.org> R-2.7.2.ebuild:
  alpha/ia64 stable #244621

  28 Oct 2008; Jeroen Roovers <jer@gentoo.org> R-2.7.2.ebuild:
  Stable for HPPA (bug #244621).

  27 Oct 2008; Markus Meier <maekke@gentoo.org> R-2.7.2.ebuild:
  amd64/x86 stable, bug #244621
