@@ -2,7 +2,7 @@ AUX R-2.8.0-without-X.patch 430 RMD160 9601d7fb97146196e7a56201ccdcc099a56327b1 
 DIST R-2.8.1.tar.gz 16585380 RMD160 1d12f8833a7b368d3cc06488172394ce4cb165ff SHA1 71e577dc061ff8720ce399471a75dea5b8fb1dab SHA256 ab488af73ce7a4f2057afcf0e725be96c9ae37f8721143004397b91928ecfa60
 DIST R-2.9.0.tar.gz 18423754 RMD160 90c9b42d7e8f3c78fa3442690dedb23c10d9a294 SHA1 97c610b31113db27999cf615d4182d68c8602a4f SHA256 f2de4b710feabf0395ee3503befc69332b78ed6b159e959e93bc086a1a8ad818
 DIST R.bash_completion.bz2 4019 RMD160 796951fb32e9ea4074dcd5ba3da5955ec0193993 SHA1 05ddebef0df16f0bf35aecc8fcb702ad5d106e5e SHA256 424790f7be27a0aad7b65289c97cb15d2ca9ee272f30f3e5c906217e487c7f85
-EBUILD R-2.8.1.ebuild 4069 RMD160 987b3837114a923d91c8de75a8168b05e5c37c4e SHA1 aa1f2a2beb7b78c830bf5bf79b7f4acd3c512079 SHA256 84bd5d29241694d1ba4e33d1359d558b9a767a04ff5cfe3bbab89da1c325a123
-EBUILD R-2.9.0.ebuild 4025 RMD160 a3fd26707a9421652f86193e8c3634fb02278e7a SHA1 193df26e49df7979e461b6f8c54856ecabe18128 SHA256 74333b621a66687dde9af3b35e19c3f66a9573d34aa1726d6093c2908bb9a727
-MISC ChangeLog 22327 RMD160 e2c69faed47896c28254f8b2aa9481526b467e35 SHA1 3cac7da024f85975b6779a807312fb5695f87ae5 SHA256 08009ca97f3df9e8601a475deef6037ecde0e3bcb35d17287dd104fce051dce9
+EBUILD R-2.8.1.ebuild 4046 RMD160 8b2b034e8ca258f7d2549394403657bbffc54126 SHA1 809f093604e0d46c027930e2b4fa343df5408593 SHA256 f8bf8320798efd116d9f73585c105189c81bafc4ab6416154eae1f78db3820ea
+EBUILD R-2.9.0.ebuild 4000 RMD160 ed08314ee9fe686a7d0c6921e5bc710fb2c7f737 SHA1 5c4ace07212244dce17a9d8e4a2a33a538b276c3 SHA256 caa682a53ed30f56014e3ca8d762da4a2d86ac328a606e14baac8e4a515f0ba6
+MISC ChangeLog 22476 RMD160 4419c3a8330b357a64f742285409f6c258b2135a SHA1 868a5b995fc52c526bc1a5e09426f57ef27508eb SHA256 5798f12fc1e42a0e0fae7a5f03fe79bbc076666ed67f8221f011b634607399fe
 MISC metadata.xml 1031 RMD160 375436b81f2969a32b673a47fdcd7a8ddadb6fa3 SHA1 fefc629218f970fc24f6b4e30c482112ea6e6129 SHA256 6f692bb80f78dfd8987ae3f70c12c40924ef5e0596267d928953f37f44223968
