@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/R/R-2.9.0.ebuild,v 1.1 2009/04/21 16:06:37 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/R/R-2.9.0.ebuild,v 1.2 2009/05/30 08:30:27 ulm Exp $
 
 EAPI=2
 inherit eutils fortran flag-o-matic bash-completion versionator
@@ -35,7 +35,6 @@ DEPEND="${CDEPEND}
 	dev-util/pkgconfig
 	doc? ( virtual/latex-base
 	  || ( dev-texlive/texlive-fontsrecommended
-		   app-text/tetex
 		   app-text/ptex ) )"
 
 RDEPEND="${CDEPEND}
