@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/R
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/R/ChangeLog,v 1.152 2009/04/23 13:20:31 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/R/ChangeLog,v 1.153 2009/05/30 08:30:27 ulm Exp $
+
+  30 May 2009; Ulrich Mueller <ulm@gentoo.org> R-2.7.2.ebuild,
+  R-2.8.1.ebuild, R-2.9.0.ebuild:
+  Remove app-text/tetex from dependencies, bug 227443.
 
   23 Apr 2009; Raúl Porcel <armin76@gentoo.org> R-2.8.1.ebuild:
   ia64 stable wrt #265338
